samples/_failures_safe/1761378292_d25912_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3539d339.c: In function ‘main’:
./samples/SAFE/__tmp_3539d339.c:144:5: error: expected expression at end of input
  144 |     size_t decompressed_size = decompress_rle(compressed_buf.data, compressed_buf.size, decompressed_data,
      |     ^~~~~~
./samples/SAFE/__tmp_3539d339.c:144:5: error: expected declaration or statement at end of input
